BusOne/src/objects/Sample_Order_Transaction_Audit_vod__c.object
<CustomObject>
    <description>Sample Order Transaction Audit is a read-only object maintained by the Sample_Order_Transaction_To_Audit_vod trigger on Sample Order Transaction that stores audit history of updates and deletions of Sample Order Transaction records. A row is created here only if a sample order transaction has been updated or deleted.</description>
    <fields>
        <fullName>ASSMCA_vod__c</fullName>
        <description>ASSMCA is the audit representation of the ASSMCA field on the Sample Order Transaction object.</description>
        <label>ASSMCA</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Id_vod__c</fullName>
        <description>Account Id is the audit representation of the Account Id field on the Sample Order Transaction object.</description>
        <label>Account Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name_vod__c</fullName>
        <description>Account Name  is the audit representation of the Account Name field on the Sample Order Transaction object.</description>
        <label>Account Name</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_vod__c</fullName>
        <description>Account is the audit representation of the Account field on the Sample Order Transaction object.</description>
        <label>Account</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Action_vod__c</fullName>
        <description>Action represents the type of Action performed on the Sample Order Transaction record that triggered the creation of the Sample Order Transaction Audit record. &quot;U&quot; represents Update. &quot;D&quot; represents Delete.</description>
        <label>Action</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Date_vod__c</fullName>
        <description>Call Date is the audit representation of the Call Date field on the Sample Order Transaction object.</description>
        <label>Call Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Call_Datetime_vod__c</fullName>
        <description>Call Datetime is the audit representation of the Call Datetime field on the Sample Order Transaction object.</description>
        <label>Call Datetime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Call_Id_vod__c</fullName>
        <description>Contains a text repersentation of the Id of the Call that created the Sample Order row.</description>
        <label>Call Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Name_vod__c</fullName>
        <description>Call Name is the audit representation of the Call Name field on the Sample Order Transaction object.</description>
        <label>Call Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Sample_Id_vod__c</fullName>
        <description>Contains a text repersentation of the Id of the Call Sample that created the Sample Order row.</description>
        <label>Call Sample Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Call_Sample_Name_vod__c</fullName>
        <description>Contains the Name of the Call Sample that created the Sample Order row.</description>
        <label>Call Sample Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments_vod__c</fullName>
        <description>Comments is the audit representation of the Comments field on the Sample Order Transaction object.</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Quantity_vod__c</fullName>
        <description>Confirmed Quantity is the audit representation of the Confirmed Quantity field on the Sample Order Transaction object.</description>
        <label>Confirmed Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Credentials_vod__c</fullName>
        <description>The credentials of the Account signing for a sample</description>
        <label>Credentials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Text_vod__c</fullName>
        <description>Custom text captured for the corresponding product line item. Only pertains to product that have been flagged to allow capture of custom text via the Product Catalog.</description>
        <label>Custom Text</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DEA_Expiration_Date_vod__c</fullName>
        <description>DEA Expiration Date is the audit representation of the DEA Expiration Date field on the Sample Order Transaction object.</description>
        <label>DEA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DEA_vod__c</fullName>
        <description>DEA # is the audit representation of the DEA # field on the Sample Order Transaction object.</description>
        <label>DEA #</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Status_vod__c</fullName>
        <description>Status of the sample.</description>
        <label>Delivery Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Disclaimer_vod__c</fullName>
        <description>Disclaimer is the audit representation of the Disclaimer field on the Sample Order Transaction object.</description>
        <label>Disclaimer</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Discrepancy_vod__c</fullName>
        <description>Discrepancy is the audit representation of the Discrepancy field on the Sample Order Transaction object.</description>
        <label>Discrepancy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distributor_vod__c</fullName>
        <description>Distributor is the audit representation of the Distributor field on the Sample Order Transaction object.</description>
        <label>Distributor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer_vod__c</fullName>
        <description>The name of the manufacturer of the sampled product</description>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity_vod__c</fullName>
        <description>Quantity is the audit representation of the Quantity field on the Sample Order Transaction object.</description>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Request_Receipt_vod__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Request Receipt is the audit representation of the Request Receipt field on the Sample Order Transaction object.</description>
        <label>Request_Receipt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Salutation_vod__c</fullName>
        <description>The salutation of the Account signing for a sample</description>
        <label>Salutation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_Card_Reason_vod__c</fullName>
        <description>Sample Card Reason is the audit representation of the Sample Card Reason field on the Sample Order Transaction object.</description>
        <label>Sample Card Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Laptop Unavailable</fullName>
                </value>
                <value>
                    <fullName>Application Unavailable</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sample_Send_Card_vod__c</fullName>
        <description>Sample Send Card # is the audit representation of the Sample Send Card # field on the Sample Order Transaction object.</description>
        <label>Sample Send Card #</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_U_M__c</fullName>
        <description>Sample U/M is the audit representation of the Sample U/M field on the Sample Order Transaction object.</description>
        <label>Sample U/M</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sample_vod__c</fullName>
        <description>Sample is the audit representation of the Sample field on the Sample Order Transaction object.</description>
        <label>Sample</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_1_vod__c</fullName>
        <description>Ship Address Line 1 is the audit representation of the Ship Address Line 1 field on the Sample Order Transaction object.</description>
        <label>Ship Address Line 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Address_Line_2_vod__c</fullName>
        <description>Ship Address Line 2 is the audit representation of the Ship Address Line 2 field on the Sample Order Transaction object.</description>
        <label>Ship Address Line 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_Expiration_Date_vod__c</fullName>
        <description>The expiration date of the CDS registration number for the ship to address.</description>
        <label>Ship CDS Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_CDS_vod__c</fullName>
        <description>The CDS registration number for the corresponding state of the ship to address.</description>
        <label>Ship CDS #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_City_vod__c</fullName>
        <description>Ship City is the audit representation of the Ship City field on the Sample Order Transaction object.</description>
        <label>Ship City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Country_vod__c</fullName>
        <description>Ship Country is the audit representation of the Ship Country field on the Sample Order Transaction object.</description>
        <label>Ship_Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_Expiration_Date_vod__c</fullName>
        <description>Ship License Expiration Date is the audit representation of the License Expiration Date field on the Sample Order Transaction object.</description>
        <label>Ship License Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_License_Status_vod__c</fullName>
        <description>Ship License Status is the audit representation of the License Status field on the Sample Order Transaction object.</description>
        <label>Ship License Status</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_License_vod__c</fullName>
        <description>Ship License is the audit representation of the License field on the Sample Order Transaction object.</description>
        <label>Ship License</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Location_vod__c</fullName>
        <description>Ship Address Line 1 is the audit representation of the Ship Address Line 1 field on the Sample Order Transaction object.</description>
        <label>Ship Location</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_Distributor_Exp_Date_vod__c</fullName>
        <description>The Expiration Date of the State Distributor license for the corresponding Business Ship To Address.</description>
        <label>Ship State Distributor Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_State_Distributor_vod__c</fullName>
        <description>The State Distributor license number for the corresponding Business Ship To Address.</description>
        <label>Ship State Distributor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_State_vod__c</fullName>
        <description>Ship State is the audit representation of the Ship State field on the Sample Order Transaction object.</description>
        <label>Ship State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_4_vod__c</fullName>
        <description>Ship Zip 4 is the audit representation of the Ship Zip 4 field on the Sample Order Transaction object.</description>
        <label>Ship Zip 4</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_Zip_vod__c</fullName>
        <description>Ship Zip is the audit representation of the Ship Zip field on the Sample Order Transaction object.</description>
        <label>Ship Zip</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment_Id_vod__c</fullName>
        <description>Shipment Id is the audit representation of the Shipment Id field on the Sample Order Transaction object.</description>
        <label>Shipment Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_Date_vod__c</fullName>
        <description>Signature Date is the audit representation of the Signature Date field on the Sample Order Transaction object.</description>
        <label>Signature Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Signature_Page_Display_Name_vod__c</fullName>
        <description>The value of the Account.Signature_Page_Display_Name_vod at the time of Signature Capture.</description>
        <label>Signature Page Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature_vod__c</fullName>
        <description>Signature is the audit representation of the Signature field on the Sample Order Transaction object.</description>
        <label>Signature</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status_vod__c</fullName>
        <description>Status is the audit representation of the Status field on the Sample Order Transaction object.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Saved_vod</fullName>
                </value>
                <value>
                    <fullName>Submitted_vod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Territory_vod__c</fullName>
        <description>Territory is the audit representation of the Territory field on the Sample Order Transaction object.</description>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Id_vod__c</fullName>
        <description>Transaction Id is the audit representation of the Transaction Id field on the Sample Order Transaction object.</description>
        <label>Transaction Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <label>Sample Order Transaction Audit</label>
    <nameField>
        <displayFormat>ASI-{000000000}</displayFormat>
        <label>Audit Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Order Transaction Audit</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>